Add TaskList to manage tasks