@@ -1,7 +1,5 @@
 package mochizuki;
 
-import java.util.ArrayList;
-import java.util.List;
 import java.nio.file.Paths;
 
 import mochizuki.exception.MochizukiException;
@@ -10,17 +8,18 @@ import mochizuki.task.Deadline;
 import mochizuki.task.Event;
 import mochizuki.task.Task;
 import mochizuki.task.Todo;
+import mochizuki.tasklist.TaskList;
 import mochizuki.ui.Ui;
 
 public class Mochizuki {
     public static void main(String[] args) {
         String line = "____________________________________________________________";
-        List<Task> tasks = new ArrayList<>();
+        TaskList tasks = new TaskList();
         Storage storage = new Storage(Paths.get("data", "mochizuki.txt"));
         Ui ui = new Ui();
 
         try {
-            tasks.addAll(storage.load());
+            tasks = new TaskList(storage.load());
         } catch (MochizukiException e) {
             ui.showLoadingError(e.getMessage());
         }
@@ -41,7 +40,7 @@ public class Mochizuki {
         }
     }
 
-    private static boolean handleInput(String input, List<Task> tasks, String line, Storage storage)
+    private static boolean handleInput(String input, TaskList tasks, String line, Storage storage)
             throws MochizukiException {
         if ("bye".equals(input)) {
             System.out.println(" Bye. Hope to see you again soon!");
@@ -67,7 +66,7 @@ public class Mochizuki {
                 tasks.get(index).markDone();
                 System.out.println(" Nice! I've marked this task as done:");
                 System.out.println("   " + tasks.get(index).formatForList());
-                storage.save(tasks);
+                storage.save(tasks.asUnmodifiableList());
             } else {
                 throw new MochizukiException("That task number does not exist. Try `list` to see valid numbers.");
             }
@@ -81,7 +80,7 @@ public class Mochizuki {
                 tasks.get(index).markNotDone();
                 System.out.println(" OK, I've marked this task as not done yet:");
                 System.out.println("   " + tasks.get(index).formatForList());
-                storage.save(tasks);
+                storage.save(tasks.asUnmodifiableList());
             } else {
                 throw new MochizukiException("That task number does not exist. Try `list` to see valid numbers.");
             }
@@ -99,7 +98,7 @@ public class Mochizuki {
                 System.out.println(" Noted. I've removed this task:");
                 System.out.println("   " + removed.formatForList());
                 System.out.println(" Now you have " + tasks.size() + " tasks in the list.");
-                storage.save(tasks);
+                storage.save(tasks.asUnmodifiableList());
             } else {
                 throw new MochizukiException("That task number does not exist. Try `list` to see valid numbers.");
             }
@@ -117,9 +116,9 @@ public class Mochizuki {
             }
             tasks.add(new Todo(description));
             System.out.println(" Got it. I've added this task:");
-            System.out.println("   " + tasks.getLast().formatForList());
+            System.out.println("   " + tasks.get(tasks.size() - 1).formatForList());
             System.out.println(" Now you have " + tasks.size() + " tasks in the list.");
-            storage.save(tasks);
+            storage.save(tasks.asUnmodifiableList());
             System.out.println(line);
             return false;
         }
@@ -136,9 +135,9 @@ public class Mochizuki {
             }
             tasks.add(new Deadline(description, by));
             System.out.println(" Got it. I've added this task:");
-            System.out.println("   " + tasks.getLast().formatForList());
+            System.out.println("   " + tasks.get(tasks.size() - 1).formatForList());
             System.out.println(" Now you have " + tasks.size() + " tasks in the list.");
-            storage.save(tasks);
+            storage.save(tasks.asUnmodifiableList());
             System.out.println(line);
             return false;
         }
@@ -159,9 +158,9 @@ public class Mochizuki {
             }
             tasks.add(new Event(description, from, to));
             System.out.println(" Got it. I've added this task:");
-            System.out.println("   " + tasks.getLast().formatForList());
+            System.out.println("   " + tasks.get(tasks.size() - 1).formatForList());
             System.out.println(" Now you have " + tasks.size() + " tasks in the list.");
-            storage.save(tasks);
+            storage.save(tasks.asUnmodifiableList());
             System.out.println(line);
             return false;
         }
